# generative_latent_prior

./: CLAUDE.md  README.md  pyproject.toml
configs/: train_llama8b_static.yaml
